<resources>
    <string name="app_name">Hidden Gems UI Experiment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_bar">NavigationBar</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_add">Add</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="service"><u>Customer Service</u></string>
    <string name="rtag">Request Tags</string>
    <string name="rOperatingHours">Request Operating Hours</string>
    <string name="rRemoveLocation">Request Removal of Locations</string>
    <string name="likedLocations">Liked Locations</string>
    <string name="myGems">My Gems</string>
    <string name="ContactUs">Contact Us</string>
    <string name="CUTitle">How can we help you?</string>
    <string name="CUMessage">Leave us a message below and we will address your concerns as soon as possible.</string>
    <string name="CUPromtp">Please type message here</string>
    <string name="ltag">Looking for more tags?</string>
    <string name="dtag">Enter the tags that you would like us to add into the textbox below.
    We will review them and do our best to make them happen. Please separate each tag with a comma.
        (tag, tag2, etc.)</string>
    <string name="enterTags">Enter your tags here.</string>
    <string name="submit">Submit</string>
    <string name="missing">The textbox can not be left empty. Please enter a tag or tags before submitting.</string>

    <string-array name="filter_categories">
        <item>Monument</item>
        <item>Restaurant</item>
        <item>Event</item>
        <item>Historical</item>
        <item>Park</item>
        <item>Trail</item>
        <item>Bar</item>
        <item>Bakery</item>
    </string-array>

    <string-array name="filter_tags">
        <item>Italian</item>
        <item>Sushi</item>
        <item>Coffee</item>
        <item>Mexican</item>
        <item>Indian</item>
        <item>Bowling</item>
        <item>Craft Beer</item>
        <item>Waterfall</item>
        <item>Overlook</item>
        <item>Thai</item>
        <item>Dancing</item>
        <item>Memorial</item>
    </string-array>

    <string-array name="seasons">
        <item>Summer</item>
        <item>Fall</item>
        <item>Winter</item>
        <item>Spring</item>
    </string-array>

    <string-array name="Ratings">
        <item>1-Star</item>
        <item>2-Star</item>
        <item>3-Star</item>
        <item>4-Star</item>
        <item>5-Star</item>
    </string-array>

    <string name="searchLookingFor">What are you looking for?</string>
    <!--Operating Hours-->
    <string name="OpHoursChange">Operating Hours Change?</string>
    <string name="opHoursDescription">Has there been a change in a location\'s operating hours
    that has not been updated?</string>
    <string name="opHoursDescripton2">Write the name of the location below and we will
    look into this. Thank you.</string>
    <string name="lName">Location Name:</string>
    <string name="updatedHours">Updated Operating Hours:</string>
    <!-- Location Removal -->
    <string name="locDescription">
        Is there a location that needs to be removed for any particular reason? \n\n
        List the location and reason of removal in the text area below and we will look into this. \n\n
        Thank you for your support
    </string>
    <string name="locHint">Insert location name</string>

    <!-- Verified Button -->
    <string name="verified">Request Verification</string>
    <string name="verificDescription">
        Would you like to be verified and let others know that you are a legitimate business/user? \n\n
        List the your name and/or the name of your business and the reason you would like to be verified along with a phone number to get in contact with you.
    </string>

    <!-- Report Page -->
    <string name="reportTitle">Report Page</string>
    <string-array name="reportReason">
        <item>Please Select Reason</item>
        <item>Spam</item>
        <item>Unavailable</item>
        <item>Wrong Information</item>
        <item>Inappropriate Content</item>
    </string-array>
    <string name="reportHint">Enter description here</string>

    <!-- Add Page -->
    <string name="addName">Name: </string>
    <string name="addAddress">Address: </string>
    <string name="addCategory">Category: </string>
    <string name="addTags">Tags: </string>
    <string name="addTagHint">Select Tags</string>
    <string name="addOperatingHours">Operating Hours </string>
    <string name="addStartTime">Start Time: </string>
    <string name="addEndTime">End Time: </string>
    <string name="addImageUpload">Image Upload:\n(max of 5)</string>
    <string name="addImage">Add Image</string>

    <string name="profileName">John Doe</string>
    <string name="profileEmail">johndoe@gmail.com</string>
    <string name="editProfileButton">Edit</string>
    <string name="editButtonGem">Return To Profile</string>
    <string name="textView15">My Gems</string>
    <string name="saveButtonGem">Save</string>
    <string name="saveProfileButton">Save</string>
    <string name="profileBan">Ban User</string>
    <string name="profileReport">Report</string>

    <!-- Login page -->
    <string name="userView">Username:</string>
    <string name="passView">Password:</string>
    <string name="regView"><u>Register?</u></string>
    <string name="loginView">Login</string>
    <string name="forgotView">Forgot password?</string>
    <string name="userHint">Please enter your username</string>
    <string name="passHint">Please enter your password</string>
    <string name="loginMissing">One or more fields are empty. Please fill in
        both the username and password.</string>
    <string name="badPassword">The password for this account is incorrect. Please try again.</string>
    <string name="badUsername">The username/password is incorrect. Please try again or sign-up for
    an account if you have not already.</string>


    <!-- Location View Page -->
    <string name="locationTag">Tags:</string>
    <string name="locationCategory">Category:</string>
    <string name="locationAddress">Address:</string>
    <string name="locationReview">Reviews:</string>
    <string name="locationAddReview">Write a review!</string>
    <string name="report">Report</string>
    <string name="reportReason">State the reason you would like to report this post in the textbox below. \n\n
    We appreciate and value your feedback. Thank you. </string>


</resources>